--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.application.name=purchaseorder 
+spring.application.name=purchaseorder
+spring.profiles.active=${profile_env:dev}
 
 #configurasi database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=${database_password}
+spring.datasource.url=jdbc:postgresql://${database_url:localhost}:${database_port:5432}/purchase_order
+spring.datasource.username=${database_name:adminPurchaseOrder}
+spring.datasource.password=${database_password:BoostBank12345}
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.maximum-pool-size=5
-spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.hikari.minimum-idle=${minumum_connection:1}
+spring.datasource.hikari.maximum-pool-size=${maximum_connection:5}
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.show_sql=false
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 logging.level.root=info
