feature/development: Adding comment on main application test and fixing default port for dev environtment

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=purchaseorder
-server.port=${port_purchase_order}
+server.port=${port_purchase_order:8080}
 
 #configurasi database
 spring.datasource.driver-class-name=org.postgresql.Driver
