--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+						<configuration>
+							<excludes>
+	                            <exclude>**/models/**</exclude>
+	                            <exclude>**/Constants.class</exclude>
+	                        	<exclude>**/PurchaseorderApplication.class</exclude> 
+	                    	</excludes>
+                        </configuration>
 					</execution>
 				</executions>
 			</plugin>
