feature/development: Fixing driver on properties file and adding properties to handle schema and data sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=purchaseorder
 spring.profiles.active=${profile_env:dev}
 
 #configurasi database
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:postgresql://${database_url:localhost}:${database_port:5432}/purchase_order
-spring.datasource.username=${database_name:adminPurchaseOrder}
-spring.datasource.password=${database_password:BoostBank12345}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://${database_url:localhost}:${database_port:5432}/kielvien_lourensius_esp
+spring.datasource.username=${database_name:kielvien12345}
+spring.datasource.password=${database_password:boostbank12345}
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=${minumum_connection:1}
 spring.datasource.hikari.maximum-pool-size=${maximum_connection:5}
