--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,14 +3,17 @@ server.port=${port_purchase_order:8080}
 
 #configurasi database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${database_url:localhost}:${database_port:5432}/purchase_order
-spring.datasource.username=${database_name:adminpurchaseorder}
+spring.datasource.url=jdbc:postgresql://${database_url:localhost}:${database_port:5432}/kielvien_lourensius_esp
+spring.datasource.username=${database_name_dev:kielvien12345}
 spring.datasource.password=${database_password_dev:boostbank12345}
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=${minumum_connection:1}
 spring.datasource.hikari.maximum-pool-size=${maximum_connection:5}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=always
 
 logging.level.root=info
