--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,5 +15,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=none
 
 spring.sql.init.mode=always
+spring.jackson.default-property-inclusion=non-null
 
 logging.level.root=info
