--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,10 +11,11 @@ spring.datasource.hikari.minimum-idle=${minumum_connection:1}
 spring.datasource.hikari.maximum-pool-size=${maximum_connection:5}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=none
-
-spring.sql.init.mode=always
 spring.jackson.default-property-inclusion=non-null
 
+logging.file.name=logs/pruchase-order.log
+logging.file.path=logs/
 logging.level.root=info
