--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,6 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
+logging.file.name=pruchase-order.log
+logging.file.path=log
 logging.level.root=info
